<?xml version="1.0"?>
<package format="3">
  <name>robot_viewer</name>
  <version>0.0.1</version>
  <description>Generic URDF viewer (RViz + joint sliders)</description>
  <maintainer email="244419461+wjdtjdwo0609-cyber@users.noreply.github.com">tjdwo0609</maintainer>
  <license>MIT</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
